tests/typec-test/test_out/cross-module-item-access-parse-out.txt
error: expected '{' but got '['
 --> cross-module-item-access\root.ctl:1:144
  |
1 | use { "./a" ; "./b" } ; fn main() -> uint => a \ pass(uint \ a \ pass(a \ A \ a \ pass(0).b \ pass())) ; fn other_main() -> uint => a \ pass \ [uint] (0) ;
  |                                                                                                                                                ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr

